Fix input on mobile iOS
This seems a bit hacky and doesn't work perfectly, but at least it is
better than no input at all.  Should investigate how xterm.js handled
this, but note that this library never promised to support mobile.

Does not yet fix Android.  We still have the same problems as xterm.js
had because the soft keyboard does not generate keydown events.  Will
fix later.

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -93,6 +93,11 @@ html, body {
     grid-row-start: 3;
 }
 
+#mobile-input {
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
 footer {
     position: fixed;
     left: 0;
